--- a/css/styles.css
+++ b/css/styles.css
@@ -763,17 +763,62 @@ button:hover {
 }
 
 /* Banner */
+
 .banner {
     position: absolute;
     margin-top: 80px;
     height: calc(100vh - 80px);
     width: 100vw;
-    background: #6f5853;
+    background: #fff;
     z-index: -1;
+    display: flex;
+    justify-content: center;
 }
 
-.bannerImage {
-
-    margin-top: 0.5%;
-    margin-left: 5vw;
+.thumbnails {
+    position: absolute;
+    bottom: 25px;
+    display: flex;
+    flex-direction: row;
+    gap: 6px;
 }
+
+.thumbnails div {
+    width: 8px;
+    height: 8px;
+    cursor: pointer;
+    background: #aaa;
+    border-radius: 100%;
+}
+
+.thumbnails div.highlighted {
+    background-color: #777;
+}
+
+.slides {
+    margin: 0 16px;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1rem;
+    width: 1590px;
+    padding: 0 0.25rem;
+    height: 898px;
+    overflow-y: auto;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: none;
+  }
+  
+  .slides > div {
+    scroll-snap-align: start;
+  }
+  
+  .slides img {
+    width: 1590px;
+    object-fit: contain;
+    margin-top: .5%;
+  }
+  
+  .slides::-webkit-scrollbar {
+    display: none;
+  }
