--- a/css/styles.css
+++ b/css/styles.css
@@ -775,6 +775,24 @@ button:hover {
     justify-content: center;
 }
 
+video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 100vw;
+    z-index: -1;
+}
+
+.bannerTitle {
+    position: absolute;
+    font-size: 85px;
+    text-transform: uppercase;
+    left: 10px;
+    margin-top: 10px;
+    line-height: .9;
+    text-shadow: 2px 2px #fff;
+}
+
 .thumbnails {
     position: absolute;
     bottom: 25px;
@@ -800,7 +818,7 @@ button:hover {
     display: grid;
     grid-auto-flow: column;
     gap: 1rem;
-    width: 1590px;
+    width: 1400px;
     padding: 0 0.25rem;
     height: 898px;
     overflow-y: auto;
@@ -814,9 +832,9 @@ button:hover {
   }
   
   .slides img {
-    width: 1590px;
+    width: 1400px;
     object-fit: contain;
-    margin-top: .5%;
+    margin-top: 7.5%;
   }
   
   .slides::-webkit-scrollbar {
