--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ header {
 /* .nav__item */
 .menDropdown .dropBtn {
     margin-top: 70px;
-    border-top: 1px solid #000;
+    border-top: 0.5px solid #000;
 }
 
 .dropBtn {
@@ -142,7 +142,7 @@ header {
     letter-spacing: 1.5px;
     padding: 1rem;
     padding-bottom: 3.5px;
-    border-bottom: 1px solid #000;
+    border-bottom: 0.5px solid #000;
     width: 100vw;
 }
 
@@ -558,12 +558,12 @@ button:hover {
     
     /* Search */
     .webSearchContainer {
-        height: 90vh;
+        height: 65px;
         width: 100vw;
         text-align: center;
         display: none;
         background-color: #fff;
-        margin-top: 10vh;
+        margin-top: 80px;
     }
     
     .webSearch {
@@ -679,7 +679,7 @@ button:hover {
     #webCart {
         height: calc(100vh - 80px);
         width: 22vw;
-        background: rgb(255, 255, 255, 0);
+        background: #fff;
         position: relative;
         margin-left: 78vw;
         margin-top: 80px;
@@ -775,8 +775,8 @@ button:hover {
     }
 
     #webCart > h1 {
-        font-family: "adineue_light", Arial, Helvetica, sans-serif;
-        font-size: 22px;
+        font-family: "adineue_bold", Arial, Helvetica, sans-serif;
+        font-size: 30px;
         text-align: center;
         text-transform: uppercase;
         margin-top: 80px;
@@ -799,6 +799,71 @@ button:hover {
 }
 
 /* Banner */
+.banner {
+    position: relative;
+    margin-top: 80px;
+    height: 35vh;
+    width: 100vw;
+    z-index: -2;
+}
+
+video {
+    display: none;
+}
+
+.bannerTitle {
+    display: none;
+}
+
+.thumbnails {
+    position: absolute;
+    bottom: 25px;
+    display: flex;
+    flex-direction: row;
+    gap: 6px;
+    right: 50%;
+    transform: translate(50%);
+}
+
+.thumbnails div {
+    width: 8px;
+    height: 8px;
+    cursor: pointer;
+    background: #aaa;
+    border-radius: 100%;
+}
+
+.thumbnails div.highlighted {
+    background-color: #777;
+}
+
+.slides {
+    position: absolute;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1rem;
+    width: 400px;
+    padding: 0 0.25rem;
+    height: 35vh;
+    overflow-y: auto;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: none;
+    z-index: -1;
+  }
+  
+  .slides > div {
+    scroll-snap-align: start;
+  }
+  
+  .slides img {
+    width: 400px;
+    object-fit: contain;
+  }
+  
+  .slides::-webkit-scrollbar {
+    display: none;
+}
 
 @media screen and (min-width: 768px) {
     .banner {
@@ -812,6 +877,7 @@ button:hover {
 
     video {
         position: absolute;
+        display: block;
         z-index: -2;
         /* Help Video stay in place */
         width: 100%;
@@ -821,6 +887,7 @@ button:hover {
 
     .bannerTitle {
         position: absolute;
+        display: block;
         font-size: 85px;
         text-transform: uppercase;
         left: 10px;
@@ -858,7 +925,7 @@ button:hover {
         gap: 1rem;
         width: 1400px;
         padding: 0 0.25rem;
-        height: 898px;
+        height: calc(100vh - 80px);
         overflow-y: auto;
         overscroll-behavior-x: contain;
         scroll-snap-type: x mandatory;
@@ -876,6 +943,7 @@ button:hover {
         width: 1400px;
         object-fit: contain;
         margin-top: 7.5%;
+        transform: initial;
       }
       
       .slides::-webkit-scrollbar {
